<resources>
    <string name="app_name">DonCaruso</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="inicio">Inicio</string>
    <string name="gallery">Gallery</string>
    <string name="slideshow">Slideshow</string>
    <string name="tools">Tools</string>
    <string name="Cuenta">Mi Cuenta</string>
    <string name="Pedidos">Mis Pedidos</string>
    <string name="Configuracion">Configuración</string>
    <string name="Categorias">Categorias</string>
    <string name="Registro">Crear cuenta</string>
    <string name="Login">Iniciar sesión</string>
    <string name="usuario">Usuario</string>
    <string name="contrase_a">Contraseña</string>
    <string name="crear_boton">Iniciar sesión</string>
    <string name="olvide">Olvidé mi contraseña</string>
    <string name="nombre">Nombre</string>
    <string name="apellidos">Apellidos</string>
    <string name="dni">DNI</string>
    <string name="email">Email</string>
    <string name="telefono">Telefono</string>
    <string name="reg_cuenta">Crear Cuenta</string>
    <string name="modificar">Modificar Datos</string>
    <string name="logout">Cerrar Sesión</string>
    <string name="cantidad">Cantidad</string>
    <string name="descripci_n">Descripción</string>
    <string name="precio">Precio</string>
    <string name="s">S/.</string>
    <string name="no_se_ha_encontrado_pedido_alguno">No se ha encontrado, pedido alguno</string>
    <string name="unidades">Unidades</string>
    <string name="sss">S/.</string>
    <string name="nuevos_soles">nuevos soles</string>
    <string name="comprar">COMPRAR</string>
    <string name="Nombre">Nombre</string>
    <string name="direccion">Dirección</string>
    <string name="NroLoteo">Nro/Lote</string>
    <string name="Urbanizacion">Urbanización</string>
    <string name="Referencia">Referencia</string>
    <string name="Continuar">Continuar</string>

    <string-array name="cantidad">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>

    <string-array name="distritos">
        <item>Ciudad Nueva</item>
        <item>Gregorio Albarracin</item>
        <item>Pocollay</item>
        <item>Leguia</item>
    </string-array>

</resources>
