<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <EditText
            android:id="@+id/nombre_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/edit_text_border"
            android:ems="10"
            android:hint="@string/nombre"
            android:inputType="textPersonName"
            android:padding="16dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textSize="16sp"
            android:fontFamily="sans-serif" />

        <EditText
            android:id="@+id/apellido_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/edit_text_border"
            android:ems="10"
            android:hint="@string/apellidos"
            android:inputType="textPersonName"
            android:padding="16dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textSize="16sp"
            android:fontFamily="sans-serif" />

        <EditText
            android:id="@+id/dni_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/edit_text_border"
            android:ems="10"
            android:hint="@string/dni"
            android:inputType="number"
            android:padding="16dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textSize="16sp"
            android:fontFamily="sans-serif" />

        <EditText
            android:id="@+id/email_input_reg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/edit_text_border"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="16dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textSize="16sp"
            android:fontFamily="sans-serif" />

        <EditText
            android:id="@+id/contrasena_imput_reg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/edit_text_border"
            android:ems="10"
            android:hint="@string/contrase_a"
            android:inputType="textPassword"
            android:padding="16dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textSize="16sp"
            android:fontFamily="sans-serif" />

        <EditText
            android:id="@+id/telefono_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/edit_text_border"
            android:ems="10"
            android:hint="@string/telefono"
            android:inputType="number"
            android:padding="16dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textSize="16sp"
            android:fontFamily="sans-serif" />

        <Button
            android:id="@+id/crear_cuenta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="24dp"
            android:paddingTop="24dp"
            android:layout_marginTop="25dp"
            android:text="@string/reg_cuenta"
            android:textColor="@android:color/white"
            android:background="@color/colorPrimary"/>

    </LinearLayout>
</ScrollView>
