<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">


    <EditText
        android:id="@+id/email_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/edit_text_border"
        android:ems="10"
        android:hint="@string/usuario"
        android:inputType="textEmailAddress"
        android:padding="16dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textSize="16sp"
        android:fontFamily="sans-serif" />

    <EditText
        android:id="@+id/contrasena_imput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/edit_text_border"
        android:ems="10"
        android:hint="@string/contrase_a"
        android:inputType="textPassword"
        android:padding="16dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textSize="16sp"
        android:fontFamily="sans-serif" />

    <TextView
        android:text="@string/olvide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="right"
        android:id="@+id/textView30"
        android:textSize="14sp"
        android:textStyle="normal|bold"
        android:textAlignment="center"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/btn_iniciar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="24dp"
        android:paddingTop="24dp"
        android:layout_marginTop="25dp"
        android:text="@string/crear_boton"
        android:textColor="@android:color/white"
        android:background="@color/colorPrimary"/>


</LinearLayout>